--- a/package.json
+++ b/package.json
@@ -10,10 +10,22 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@unform/core": "^2.1.6",
+    "@unform/web": "^2.1.6",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
+    "mongoose": "^6.8.3",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-multi-select-component": "^4.3.4",
+    "sass": "^1.57.1",
+    "uuidv4": "^6.2.13",
+    "yup": "^0.32.11"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
